@@ -1,14 +1,19 @@
 /**
  * Repositorio de Empleados
  *
- * Esta clase implementa la interface `repo<Empleados>` para gestionar el acceso a los datos de los empleados del sistema.
+ * Esta clase implementa la interfaz `IRepository<Empleados, Integer>` para gestionar el acceso a los datos de los empleados del sistema.
  * Los datos se almacenan en un archivo JSON llamado "empleados.json".
+ *
+ * @see IRepository
+ * @see Empleados
  */
 package com.framallo90.Empleados.Model.Repository;
+
 import com.framallo90.Empleados.Model.Entity.Empleados;
 import com.framallo90.Interfaces.IRepository;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
+
 import java.io.FileNotFoundException;
 import java.io.FileReader;
 import java.io.FileWriter;
@@ -22,17 +27,31 @@ public class EmpleadosRepository implements IRepository<Empleados, Integer> {
     private List<Empleados> list;
     private static final String PATH_EMPLEADOS = "src/main/resources/empleados.json";
     private final Gson gson = new Gson();
+
+    /**
+     * Constructor de la clase `EmpleadosRepository`.
+     * Carga la lista de empleados desde el archivo JSON y establece el contador de empleados.
+     */
     public EmpleadosRepository() {
         this.loadEmpleados();
         if (!this.list.isEmpty())
-            Empleados.setCont(this.list.getLast().getId());
+            Empleados.setCont(this.list.get(this.list.size() - 1).getId());
     }
 
+    /**
+     * Obtiene la lista de empleados.
+     *
+     * @return La lista de empleados.
+     */
     public List<Empleados> getList() {
         return list;
     }
 
-    public void loadEmpleados(){
+    /**
+     * Carga los empleados desde el archivo JSON.
+     * Si el archivo no se encuentra, inicializa la lista como vacía.
+     */
+    public void loadEmpleados() {
         try (FileReader fileReader = new FileReader(PATH_EMPLEADOS)) {
             Type type = new TypeToken<List<Empleados>>(){}.getType();
             this.list = gson.fromJson(fileReader, type);
@@ -45,19 +64,33 @@ public class EmpleadosRepository implements IRepository<Empleados, Integer> {
         }
     }
 
-
-    public void saveEmpleados(){
-        try(FileWriter fileWriter = new FileWriter(PATH_EMPLEADOS)) {
-            gson.toJson(this.list,fileWriter);
+    /**
+     * Guarda los empleados en el archivo JSON.
+     */
+    public void saveEmpleados() {
+        try (FileWriter fileWriter = new FileWriter(PATH_EMPLEADOS)) {
+            gson.toJson(this.list, fileWriter);
         } catch (IOException e) {
             e.printStackTrace();
         }
     }
+
+    /**
+     * Agrega un empleado a la lista y guarda los cambios en el archivo JSON.
+     *
+     * @param object El empleado a agregar.
+     */
     @Override
     public void add(Empleados object) {
         this.list.add(object);
         this.saveEmpleados();
     }
+
+    /**
+     * Elimina un empleado de la lista por su ID y guarda los cambios en el archivo JSON.
+     *
+     * @param id El ID del empleado a eliminar.
+     */
     @Override
     public void remove(Integer id) {
         Empleados remover = this.find(id);
@@ -65,6 +98,7 @@ public class EmpleadosRepository implements IRepository<Empleados, Integer> {
         this.list.remove(remover);
         this.saveEmpleados();
     }
+
     /**
      * Actualiza un empleado existente en la lista.
      *
@@ -86,12 +120,8 @@ public class EmpleadosRepository implements IRepository<Empleados, Integer> {
      */
     @Override
     public Empleados find(Integer id) {
-        Optional<Empleados> devol = this.list.stream().filter(e ->e.getId().equals(id)).findFirst();
-        if(devol.isEmpty()){
-            return null;
-        }else{
-            return  devol.get();
-        }
+        Optional<Empleados> devol = this.list.stream().filter(e -> e.getId().equals(id)).findFirst();
+        return devol.orElse(null);
     }
 
     /**
